--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,25 @@
+// @import 'material-icons/iconfont/material-icons.scss';
+
 @import './lib/ECommerceSite.scss';
+@import './lib/HeaderRow.scss';
+@import './lib/SlideBackground.scss';
 
 
-body, html {
+body, html, #js-mount {
+  height: 100vh;
+  width: 100vw;
   padding:0px;
   margin:0px;
+  font-family: sans-serif;
+}
+
+* {
+  transition-duration: 0.4s;
+}
+
+.align-left {
+  text-align: left;
+}
+.align-right {
+  text-align: right;
 }
