Floating title added.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 // @import 'material-icons/iconfont/material-icons.scss';
 
 @import './lib/ECommerceSite.scss';
+@import './lib/FloatingTitle.scss';
 @import './lib/HeaderRow.scss';
 @import './lib/SlideBackground.scss';
 
@@ -11,6 +12,7 @@ body, html, #js-mount {
   padding:0px;
   margin:0px;
   font-family: sans-serif;
+  user-select: none;
 }
 
 * {
