--- a/src/lib/ECommerceSite.scss
+++ b/src/lib/ECommerceSite.scss
@@ -1,15 +1,9 @@
 .ECommerceSite {
-  background-image: url("assets/Death_to_Stock_Chasing_Sunrise_9_Julian_DeSchutter.jpg");
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  // opacity: 0.5;
-  height: 100vh;
-
-  // position: fixed;
-  // top: 0px;
-  // left: 0px;
-  // right: 0px;
+  // background-image: url("assets/Death_to_Stock_Chasing_Sunrise_9_Julian_DeSchutter.jpg");
+  // background-attachment: fixed;
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  //
+  // height: 100vh;
 }
