--- a/src/lib/SlideBackground.scss
+++ b/src/lib/SlideBackground.scss
@@ -1,6 +1,20 @@
-.slide-background-component {
+.SlideBackground {
   z-index: -1;
   width: 100vw;
   display: sticky;
   top: 0px;
+
+  background-image: url("assets/Death_to_Stock_Chasing_Sunrise_9_Julian_DeSchutter.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  height: 100vh;
+  opacity: 1;
+}
+
+.SlideBackground.lighten {
+  opacity: 0.5;
+
 }
