--- a/src/lib/SlideBackground.scss
+++ b/src/lib/SlideBackground.scss
@@ -1,8 +1,5 @@
 .SlideBackground {
   z-index: -1;
-  width: 100vw;
-  display: sticky;
-  top: 0px;
 
   background-image: url("assets/Death_to_Stock_Chasing_Sunrise_9_Julian_DeSchutter.jpg");
   background-attachment: fixed;
@@ -10,11 +7,16 @@
   background-repeat: no-repeat;
   background-size: cover;
 
+  display: sticky;
   height: 100vh;
   opacity: 1;
+
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 0px;
 }
 
 .SlideBackground.lighten {
   opacity: 0.5;
-
 }
