Cart page added.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 // @import 'material-icons/iconfont/material-icons.scss';
 
+@import './lib/CartItem.scss';
 @import './lib/CartPage.scss';
 @import './lib/ECommerceSite.scss';
 @import './lib/FloatingTitle.scss';
