Cart page improved.

--- a/src/lib/ECommerceSite.scss
+++ b/src/lib/ECommerceSite.scss
@@ -1,6 +1,7 @@
 .ECommerceSite {
   position: relative;
-  height: 200vh;
+  // height: 200vh;
+  height: auto;
 }
 .ECommerceSite .open {
   height: 300vh;
